@@ -550,7 +550,7 @@ const_row_iterator::operator-(const_row_iterator const &i) const noexcept
 template<typename Tuple, std::size_t index>
 inline void row::extract_value(Tuple &t) const
 {
-  using field_type = strip_t<decltype(std::get<index>(t))>;
+  using field_type = std::remove_cvref_t<decltype(std::get<index>(t))>;
   field const f{m_result, m_index, index};
   std::get<index>(t) = from_string<field_type>(f);
 }
